WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109917
[WK2][EFL] WebPageProxy::setThemePath() should check that the page is valid
https://bugs.webkit.org/show_bug.cgi?id=109917
Summary
[WK2][EFL] WebPageProxy::setThemePath() should check that the page is valid
Mikhail Pozdnyakov
Reported
2013-02-15 02:17:10 PST
WebPageProxy::setThemePath() should check that the page is valid before sending IPC message.
Attachments
patch
(1.42 KB, patch)
2013-02-15 02:20 PST
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2013-02-15 02:20:21 PST
Created
attachment 188519
[details]
patch
Chris Dumez
Comment 2
2013-02-15 02:23:46 PST
Comment on
attachment 188519
[details]
patch LGTM.
Kenneth Rohde Christiansen
Comment 3
2013-02-15 04:28:37 PST
Comment on
attachment 188519
[details]
patch LGTM
Alexey Proskuryakov
Comment 4
2013-02-15 10:32:31 PST
Comment on
attachment 188519
[details]
patch Why? This breaks calling this method while the process is launching.
Anders Carlsson
Comment 5
2013-02-15 10:48:51 PST
(In reply to
comment #4
)
> (From update of
attachment 188519
[details]
) > Why? This breaks calling this method while the process is launching.
I don’t think this is true. isValid() will only return false if the page has been closed using WebPageProxy::closed(), or if the process has crashed and the page hasn’t been reattached to the new process yet.
Mikhail Pozdnyakov
Comment 6
2013-02-19 08:48:04 PST
(In reply to
comment #5
)
> (In reply to
comment #4
) > > (From update of
attachment 188519
[details]
[details]) > > Why? This breaks calling this method while the process is launching. > > I don’t think this is true. isValid() will only return false if the page has been closed using WebPageProxy::closed(), or if the process has crashed and the page hasn’t been reattached to the new process yet.
Indeed, it just should not allow send IPC messages if web process is not running any more. Most of WebPageProxy methods check isValid() before sending and return if it returns false, some methods are trying to re-launch the web process (for instance loadURL()) but this is not the desired behaviour for WebPageProxy::setThemePath() I guess.
Mikhail Pozdnyakov
Comment 7
2013-02-21 10:43:01 PST
Could please anyone review it?
WebKit Review Bot
Comment 8
2013-03-05 11:52:01 PST
Comment on
attachment 188519
[details]
patch Clearing flags on attachment: 188519 Committed
r144794
: <
http://trac.webkit.org/changeset/144794
>
WebKit Review Bot
Comment 9
2013-03-05 11:52:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug