[WK2][EFL] WebPageProxy::setThemePath() should check that the page is valid https://bugs.webkit.org/show_bug.cgi?id=109917

Reviewed by Alexey Proskuryakov.

WebPageProxy::setThemePath() should check that the page is valid before
sending IPC message.

* UIProcess/efl/WebPageProxyEfl.cpp:
(WebKit::WebPageProxy::setThemePath):


Canonical link: https://commits.webkit.org/129820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144794 268f45cc-cd09-0410-ab3c-d52691b4dbfc